--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,10 +19,10 @@ jobs:
       with:
         java-version: 14
     - name: Maven Set Version Snapshot
-      if: contains(github.ref,'*d')  
+      if: endsWith(github.ref,'d')  
       run: mvn versions:set -DnewVersion=${{ env.RELEASE_VERSION }}-SNAPSHOT && mvn versions:commit
     - name: Maven Set Version Release
-      if: contains(github.ref,'*u') || contains(github.ref,'*h')
+      if: endsWith(github.ref,'u') || endsWith(github.ref,'*h')
       run: mvn versions:set -DnewVersion=${{ env.RELEASE_VERSION }}-RELEASE && mvn versions:commit
     - name: Maven Package 
       run: mvn -B clean package
